--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -7,6 +7,7 @@
   },
   "main": "dist/index.js",
   "scripts": {
+    "prebuild": "cd ../evaluator && npm run build",
     "build": "tsc",
     "dev": "ts-node src/index.ts",
     "test": "jest",
