feat: Lock Node.js >=18 requirement and document guarantees
- Added engines field requiring Node.js >=18.0.0 and npm >=8.0.0
- Updated all package.json files with Node version requirements
- Added Requirements section to README
- Created GUARANTEES.md documenting:
  - No network calls during evaluation
  - Deterministic execution guarantees
  - Semantic checks remain optional/warn-only (future)
  - Security and performance guarantees

--- a/package.json
+++ b/package.json
@@ -6,6 +6,10 @@
   "workspaces": [
     "packages/*"
   ],
+  "engines": {
+    "node": ">=18.0.0",
+    "npm": ">=8.0.0"
+  },
   "scripts": {
     "build": "npm run build --workspaces",
     "test": "npm run test --workspaces",
