--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -6,6 +6,10 @@
     "promptproof": "./dist/index.js"
   },
   "main": "dist/index.js",
+  "engines": {
+    "node": ">=18.0.0",
+    "npm": ">=8.0.0"
+  },
   "scripts": {
     "prebuild": "cd ../evaluator && npm run build",
     "build": "tsc",
