--- a/packages/evaluator/package.json
+++ b/packages/evaluator/package.json
@@ -4,6 +4,10 @@
   "description": "Core evaluation engine for PromptProof",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
+  "engines": {
+    "node": ">=18.0.0",
+    "npm": ">=8.0.0"
+  },
   "scripts": {
     "build": "tsc",
     "test": "jest",
