feat: complete repository polish according to playbook
- Add professional README with badges, quickstart, and guarantees
- Create SECURITY.md, CONTRIBUTING.md, and CODE_OF_CONDUCT.md
- Add GitHub issue templates and PR template
- Update GitHub workflow with improved CI/CD
- Add comprehensive package structure with CLI and SDK
- Include repository polish checklist for tracking
- Add docs structure for visual assets

--- a/.github/ISSUE_TEMPLATE/bug_report.yml
+++ b/.github/ISSUE_TEMPLATE/bug_report.yml
@@ -85,6 +85,13 @@ body:
       description: Your promptproof.yaml (if relevant)
       render: yaml
   
+  - type: input
+    id: fixture_line
+    attributes:
+      label: Fixture Line (if applicable)
+      description: The specific fixture line number that's failing (e.g., "fixtures/support-replies/outputs.jsonl:47")
+      placeholder: "fixtures/support-replies/outputs.jsonl:47"
+  
   - type: textarea
     id: additional
     attributes:
