--- a/package.json
+++ b/package.json
@@ -31,7 +31,15 @@
   },
   "keywords": [
     "llm",
+    "ci",
     "testing",
+    "github-actions",
+    "guardrails",
+    "prompt-engineering",
+    "openai",
+    "anthropic",
+    "rag",
+    "security",
     "ai",
     "prompt",
     "contract-testing",
