--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -22,11 +22,13 @@
     "ajv-formats": "^2.1.1",
     "chalk": "^4.1.2",
     "commander": "^11.1.0",
+    "diff": "^5.1.0",
     "fs-extra": "^11.2.0",
     "js-yaml": "^4.1.0",
     "ora": "^5.4.1"
   },
   "devDependencies": {
+    "@types/diff": "^5.0.9",
     "@types/fs-extra": "^11.0.4",
     "@types/js-yaml": "^4.0.9",
     "@types/node": "^20.10.0",
