docs: add https://promptproof.io to homepage/links

--- a/packages/sdk-node/package.json
+++ b/packages/sdk-node/package.json
@@ -44,5 +44,5 @@
   "bugs": {
     "url": "https://github.com/geminimir/promptproof/issues"
   },
-  "homepage": "https://github.com/geminimir/promptproof#readme"
+  "homepage": "https://promptproof.io"
 }
