--- a/package.json
+++ b/package.json
@@ -50,5 +50,5 @@
   "bugs": {
     "url": "https://github.com/geminimir/promptproof/issues"
   },
-  "homepage": "https://github.com/geminimir/promptproof#readme"
+  "homepage": "https://promptproof.io"
 }
