--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -10,6 +10,7 @@
     "node": ">=18"
   },
   "license": "MIT",
+  "homepage": "https://promptproof.io",
   "scripts": {
     "prebuild": "cd ../evaluator && npm run build",
     "build": "tsc",
