feat: add zero-friction try-now experience and contribution surface
- Add one-click dev environments (Codespaces + Gitpod)
- Create deterministic Next.js JSON guard example
- Add comprehensive CONTRIBUTING.md with 5-minute quick start
- Create json-essentials@0.1.0 pack
- Add 8 pre-filled contributor issues
- Update README with try buttons and quick start section
- Add minimal CI workflow for red→green demonstration

This enables users to try PromptProof in 60 seconds with zero setup.

--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "test": "npm run test --workspaces",
     "lint": "eslint packages/*/src --ext .ts,.js",
     "format": "prettier --write 'packages/**/*.{ts,js,json}'",
-    "clean": "rm -rf packages/*/dist packages/*/build"
+    "clean": "rm -rf packages/*/dist packages/*/build",
+    "try:example": "pnpm --filter pp-nextjs-json-guard try",
+    "fix:example": "pnpm --filter pp-nextjs-json-guard fix"
   },
   "devDependencies": {
     "@types/node": "^20.10.0",
